<resources>
    <string name="app_name">Statistics Quantity Calculator</string>
    <string name="textexplanation">Insert values inside the number bar and submit when you are done.</string>
    <string name="addbutton" translatable="false">Add</string>
    <string name="finishbutton">Finish</string>
    <string name="back">Back</string>

    <string name="average">"The mean is: "</string>
    <string name="median">The median is: </string>
    <string name="fashion">"The mode is: "</string>
    <string name="variance">The variance is: </string>
    <string name="mean_deviation">"The mean absolute deviation is: "</string>
    <string name="standard_deviation">The standard deviation is: </string>
    <string name="blankinput">Empty.</string>
    <string name="notnumber">This isn\'t a number.</string>
    <string name="added">Added.</string>
    <string name="blankarray">List is empty. Added something!</string>
    <string name="removebutton">Remove</string>
    <string name="removed">Removed.</string>

</resources>